Fix link highlight overlap

--- a/src/components/Link/Link.module.scss
+++ b/src/components/Link/Link.module.scss
@@ -22,8 +22,8 @@
   }
 
   @include util.mw-md {
-    margin-inline: -0.3em -0.2em;
-    padding-inline: 0.3em 0.2em;
+    margin-inline: -0.2em -0.1em;
+    padding-inline: 0.2em 0.1em;
   }
 }
 
